add article redis-master.md

--- a/en/index.html
+++ b/en/index.html
@@ -68,7 +68,7 @@
             "description": "平庸不至于平庸",
             "email": "marin-man@163.com",
             "image": "https://marin-man.github.io/icons/apple-touch-icon.png",
-            "url": "https://marin-man.github.io/blog",
+            "url": "https://marin-man.github.io/",
             "name": "慢慢"
         },
         "license": "[CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/deed.en)",
