--- a/interview/interview-tencent/index.html
+++ b/interview/interview-tencent/index.html
@@ -470,7 +470,7 @@
                     </li>
                 
                     <li class="related-item">
-                        <a href="/algorithm/find-all-duplicates-in-an-array/" class="related-link">数组中重复的数据</a>
+                        <a href="/posts/nio/" class="related-link">NIO</a>
                     </li>
                 
             </ul>
