--- a/interview/interview-tencent/index.html
+++ b/interview/interview-tencent/index.html
@@ -470,7 +470,7 @@
                     </li>
                 
                     <li class="related-item">
-                        <a href="/posts/nio/" class="related-link">NIO</a>
+                        <a href="/posts/multiplexing/" class="related-link">多路复用</a>
                     </li>
                 
             </ul>
