--- a/interview/interview-wangyi/index.html
+++ b/interview/interview-wangyi/index.html
@@ -417,7 +417,7 @@
                     </li>
                 
                     <li class="related-item">
-                        <a href="/posts/nio/" class="related-link">NIO</a>
+                        <a href="/posts/multiplexing/" class="related-link">多路复用</a>
                     </li>
                 
             </ul>
