feat: add algirothm

--- a/interview/interview-tencent/index.html
+++ b/interview/interview-tencent/index.html
@@ -470,7 +470,7 @@
                     </li>
                 
                     <li class="related-item">
-                        <a href="/posts/multiplexing/" class="related-link">多路复用</a>
+                        <a href="/algorithm/stickers-to-spell-word/" class="related-link">贴纸拼词</a>
                     </li>
                 
             </ul>
