--- a/en/404.html
+++ b/en/404.html
@@ -15,7 +15,7 @@
     
     <meta http-equiv="Cache-Control" content="no-siteapp" />
 
-    <title>404 Page not found | 慢慢的个人博客</title>
+    <title>404 Page not found | 慢慢的博客</title>
 
     <link rel="stylesheet" href="/en/css/meme.min.6e912e913a4e1d8d80b9cbe283f98eed736f25bcbeef1c47513db2a833f96111.css"/>
 
@@ -33,10 +33,10 @@
     <link rel="mask-icon" href="/icons/safari-pinned-tab.svg" color="#2a6df4" />
     <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="慢慢的个人博客" />
+    <meta name="apple-mobile-web-app-title" content="慢慢的博客" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="application-name" content="慢慢的个人博客" />
+    <meta name="application-name" content="慢慢的博客" />
     <meta name="msapplication-starturl" content="../../" />
     <meta name="msapplication-TileColor" content="#fff" />
     <meta name="msapplication-TileImage" content="../../icons/mstile-150x150.png" />
@@ -62,7 +62,7 @@
         "license": "[CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/deed.en)",
         "publisher": {
             "@type": "Organization",
-            "name": "慢慢的个人博客",
+            "name": "慢慢的博客",
             "logo": {
                 "@type": "ImageObject",
                 "url": "https://marin-man.github.io/icons/apple-touch-icon.png"
@@ -90,7 +90,7 @@
 <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="Blog of manman in English." />
 <meta property="og:url" content="https://marin-man.github.io/en/404.html" />
-<meta property="og:site_name" content="慢慢的个人博客" />
+<meta property="og:site_name" content="慢慢的博客" />
 <meta property="og:locale" content="en" /><meta property="og:image" content="https://marin-man.github.io/icons/apple-touch-icon.png" />
     <meta property="og:type" content="website" />
 
